# NearbyProtocols

./: .clang-format  .gitignore  CMakeLists.txt
NearbyProtocols/: CMakeLists.txt
NearbyProtocols/include/NearbyProtocols/: ConnectionAdvertisement.h  MediumAdvertisement.h  Pcp.h  ShareAdvertisement.h  ShareEnums.h  Socket.h
NearbyProtocols/source/: ConnectionAdvertisement.c  MediumAdvertisement.c  Pcp.c  ShareAdvertisement.c  ShareEnums.c  Socket.c
NearbyTests/: CMakeLists.txt
NearbyTests/include/NearbyTests/: Main.hpp  utils.h
NearbyTests/source/: Main.cpp  Utils.cpp  main.c  utils.c
NearbyUtils/: CMakeLists.txt
NearbyUtils/include/NearbyUtils/: Buffer.h
NearbyUtils/source/: Buffer.c
